Implement Bach.java program